sfdx-source/main/default/objects/VCC_Training_Mode_Data__c/fields/Allergies_Data__c.field-meta.xml
<CustomField>
    <fullName>Allergies_Data__c</fullName>
    <description>Stores the data used for creating the patient allergies for this account.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Allergies Data</label>
    <length>50000</length>
    <type>LongTextArea</type>
</CustomField>