sfdx-source/main/default/objects/VCC_Training_Mode_Data__c/fields/Appointments_Data__c.field-meta.xml
<CustomField>
    <fullName>Appointments_Data__c</fullName>
    <description>Stores the data used for creating the patient appointments for this account.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Appointments Data</label>
    <length>50000</length>
    <type>LongTextArea</type>
</CustomField>