sfdx-source/main/default/objects/VCC_Training_Mode_Data__c/fields/Data__c.field-meta.xml
<CustomField>
    <fullName>Data__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Data</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>