sfdx-source/main/default/objects/VCC_Training_Mode_Data__c/fields/DischargeSummaries_Data__c.field-meta.xml
<CustomField>
    <fullName>DischargeSummaries_Data__c</fullName>
    <description>Stores the data used for creating the patient dicharge summaries for this account.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Discharge Summary Data</label>
    <length>50000</length>
    <type>LongTextArea</type>
</CustomField>