sfdx-source/main/default/objects/VCC_Training_Mode_Data__c/fields/Immunizations_Data__c.field-meta.xml
<CustomField>
    <fullName>Immunizations_Data__c</fullName>
    <description>Stores the data used for creating the patient immunizations for this account.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Immunizations Data</label>
    <length>50000</length>
    <type>LongTextArea</type>
</CustomField>