sfdx-source/main/default/objects/VCC_Training_Mode_Data__c/fields/PACT_Data__c.field-meta.xml
<CustomField>
    <fullName>PACT_Data__c</fullName>
    <description>Stores data for creating PACT Assignments at Stations and Non VA PC Providers for this account.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>PACT Data</label>
    <length>50000</length>
    <type>LongTextArea</type>
</CustomField>