sfdx-source/main/default/objects/VCC_Training_Mode_Data__c/fields/Problems_Data__c.field-meta.xml
<CustomField>
    <fullName>Problems_Data__c</fullName>
    <description>Stores the data used for creating the patient labs for this account.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Problems Data</label>
    <length>50000</length>
    <type>LongTextArea</type>
</CustomField>