sfdx-source/main/default/objects/VCC_Training_Mode_Data__c/fields/Progress_Notes_Data__c.field-meta.xml
<CustomField>
    <fullName>Progress_Notes_Data__c</fullName>
    <description>Stores the data used for creating the patient progress notes for this account.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Progress Notes Data</label>
    <length>50000</length>
    <type>LongTextArea</type>
</CustomField>