sfdx-source/main/default/objects/VCC_Training_Mode_Data__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Allergies</fullName>
            </value>
            <value>
                <fullName>Appointments</fullName>
            </value>
            <value>
                <fullName>Consults</fullName>
            </value>
            <value>
                <fullName>Discharge Summaries</fullName>
            </value>
            <value>
                <fullName>Directives</fullName>
            </value>
            <value>
                <fullName>Flags</fullName>
            </value>
            <value>
                <fullName>Imaging</fullName>
            </value>
            <value>
                <fullName>Immunizations</fullName>
            </value>
            <value>
                <fullName>Labs</fullName>
            </value>
            <value>
                <fullName>Medications</fullName>
            </value>
            <value>
                <fullName>Orders</fullName>
            </value>
            <value>
                <fullName>PACT</fullName>
            </value>
            <value>
                <fullName>Problems</fullName>
            </value>
            <value>
                <fullName>Progress Notes</fullName>
            </value>
            <value>
                <fullName>Vet Info</fullName>
            </value>
            <value>
                <fullName>Visits</fullName>
            </value>
            <value>
                <fullName>Vitals</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>