sfdx-source/main/default/objects/VCC_Training_Mode_Data__c/fields/Visits_Data__c.field-meta.xml
<CustomField>
    <fullName>Visits_Data__c</fullName>
    <description>Stores the data used for creating the patient visits for this account.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Visits Data</label>
    <length>50000</length>
    <type>LongTextArea</type>
</CustomField>